--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.3",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.11.0",
-    "react-redux": "^7.1.0",
+    "react-redux": "^6.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
